Add points summary

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.1.4.RELEASE'
-    id "io.spring.dependency-management" version "1.0.7.RELEASE"
+    id 'io.spring.dependency-management' version '1.0.7.RELEASE'
 }
 
 repositories {
@@ -12,6 +12,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
+    implementation 'org.liquibase:liquibase-core:3.6.3'
     implementation 'com.discord4j:discord4j-core:3.0.3'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -26,5 +27,5 @@ bootJar {
 }
 
 bootRun {
-    systemProperty "spring.profiles.active", "dev"
+    systemProperty 'spring.profiles.active', 'dev'
 }
