--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'com.h2database:h2'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
     implementation 'org.liquibase:liquibase-core:3.6.3'
     implementation 'com.discord4j:discord4j-core:3.0.3'
