--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,16 @@ repositories {
     mavenCentral()
 }
 
+configurations.all {
+    resolutionStrategy {
+        failOnVersionConflict()
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.hibernate:hibernate-envers', 'org.glassfish.jaxb:jaxb-runtime'
     implementation 'com.h2database:h2'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
     implementation 'org.liquibase:liquibase-core:3.6.3'
