--- a/web/build.gradle
+++ b/web/build.gradle
@@ -6,7 +6,10 @@ plugins {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.pebbletemplates:pebble-spring-boot-2-starter:3.0.9'
+    implementation 'org.json:json:20180813'
+    implementation 'org.apache.httpcomponents:httpclient'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.liquibase:liquibase-core:3.6.3'
