--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 pebble.suffix=.peb
 discord.uri=https://discordapp.com/api/v6
 server.error.whitelabel.enabled=false
+spring.session.store-type=jdbc
