--- a/web/build.gradle
+++ b/web/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.session:spring-session-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-oauth2-client'
     implementation 'io.pebbletemplates:pebble-spring-boot-2-starter:3.0.9'
     implementation 'org.json:json:20180813'
     implementation 'org.apache.httpcomponents:httpclient'
