--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,8 +1,12 @@
 plugins {
     id 'java'
+    id 'com.github.spotbugs' version '1.7.1'
     id 'org.springframework.boot' version '2.1.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
 }
+
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -20,6 +24,9 @@ dependencies {
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
 
     implementation 'com.discord4j:discord4j-core:3.0.3'
+
+    compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.12'
+    compileOnly 'com.google.code.findbugs:jsr305:3.0.2' // used for @Nullable support (avoids compiler warnings)
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
