Rework build/test process

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,3 +1,26 @@
+# commented properties should be set in a profile
+
+#application.url=http://localhost:8080
+
 pebble.suffix=.peb
 server.error.whitelabel.enabled=false
 spring.session.store-type=jdbc
+
+spring.jpa.hibernate.ddl-auto=validate
+
+discord.base-url=https://discordapp.com/api/v6
+#discord.bot-token=secret
+
+spring.security.oauth2.client.registration.discord=discord
+#spring.security.oauth2.client.registration.discord.client-id=secret
+#spring.security.oauth2.client.registration.discord.client-secret=secret
+spring.security.oauth2.client.registration.discord.client-authentication-method=post
+spring.security.oauth2.client.registration.discord.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.discord.scope=identify,guilds
+spring.security.oauth2.client.registration.discord.redirect-uri=${application.url}/login/oauth2/code/discord
+spring.security.oauth2.client.registration.discord.client-name=Discord
+
+spring.security.oauth2.client.provider.discord.authorization-uri=${discord.base-url}/oauth2/authorize
+spring.security.oauth2.client.provider.discord.token-uri=${discord.base-url}/oauth2/token
+spring.security.oauth2.client.provider.discord.user-info-uri=${discord.base-url}/users/@me
+spring.security.oauth2.client.provider.discord.user-name-attribute=username
