--- a/web/build.gradle
+++ b/web/build.gradle
@@ -28,7 +28,9 @@ dependencies {
     compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.12'
     compileOnly 'com.google.code.findbugs:jsr305:3.0.2' // used for @Nullable support (avoids compiler warnings)
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test', {
+        exclude group: 'com.vaadin.external.google', module: 'android-json'
+    }
 }
 
 jar {
