Add repository tests
Squashed commit of the following:

commit 7041fa7180b3cf806b63de259a45ccc11858b0ee
Author: Neil Farrington <neil.farrington@rightmove.co.uk>
Date:   Sun May 19 18:04:01 2019 +0100

    Add SoftDeleteCrudRepository tests

commit 9b04d57ba8ead5dba791c4d5fa4c4c93f701bb74
Author: Neil Farrington <neil.farrington@rightmove.co.uk>
Date:   Sun May 19 16:40:54 2019 +0100

    Add RevisionRepository tests

commit b307c51f167e659de40aa6ac43c47e80197aefd5
Author: Neil Farrington <neil.farrington@rightmove.co.uk>
Date:   Sun May 19 16:17:08 2019 +0100

    Add PointsRepository tests

commit 9cf21780556485d7604e36c5cdeeb9d15f01e319
Author: Neil Farrington <neil.farrington@rightmove.co.uk>
Date:   Sun May 19 16:04:12 2019 +0100

    Add GuildRepository tests

commit 704dee11253ec36a75b74b1464576333588f9b69
Author: Neil Farrington <neil.farrington@rightmove.co.uk>
Date:   Sun May 19 12:20:46 2019 +0100

    Create MemberRepository tests

--- a/web/build.gradle
+++ b/web/build.gradle
@@ -44,3 +44,7 @@ bootJar {
 bootRun {
     systemProperty 'spring.profiles.active', 'dev'
 }
+
+test {
+    systemProperty 'user.timezone', 'UTC'
+}
